--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,98 @@
-<h1>Working.</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Planer</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/mystyle.css" />
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navigation">
+      <a class="navbar-brand" href="index.html">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#" id="add-app-link">Add Appointment</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <div class="wrapper">
+    <div class="h2">
+      <h2><b>List of all Appointments</b></h2>
+    </div>
+    <div class="list-group" id="appointments-list"></div>
+
+    <div class="Details" style="display: none">
+      <h3>Details</h3>
+      <span id="detail-id" hidden></span>
+      <p><strong>Name:</strong> <span id="detail-name"></span></p>
+      <p><strong>Location:</strong> <span id="detail-location"></span></p>
+      <p><strong>Description:</strong> <span id="detail-description"></span></p>
+      <p><strong>Voting-Start:</strong> <span id="detail-start"></span></p>
+      <p><strong>Creator:</strong> <span id="detail-creator"></span></p>
+      <p><strong>This Voting is open until:</strong> <span id="detail-end"></span></p>
+      <form id="vote-form" action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Name" id="voter" required="" />
+        </div>
+        <h3>Options:</h3>
+        <div class="appointment option"></div>
+        <h3>Comments:</h3>
+        <div id="list-comments"></div>
+        <div class="input-box">
+          <input id="voter-comment" type="text" placeholder="add a comment" />
+        </div>
+        <button id="vote-comment" type="button" class="btn">Submit</button>
+        <button id="del-btn" type="button" class="btn">Delete</button>
+      </form>
+      <div id="box">
+      </div>
+    </div>
+    <div class="newApp" style="display: none">
+      <h2><b>New Appointment</b></h2>
+      <form id="appointment-form" action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Name" id="name" name="name" required>
+        </div>
+        <div class="input-box">
+          <input type="text" placeholder="Location" id="location" name="location" required>
+        </div>
+        <div class="input-box">
+          <input type="text" placeholder="Description" id="description" name="description" required>
+        </div>
+        <div class="row">
+          <div class="input-box col">
+            <input type="datetime-local" id="start" name="start" required>
+            <h5>Vote-Start</h5>
+          </div>
+          <div class="input-box col">
+            <input type="datetime-local" id="end" name="end" required>
+            <h5>Vote-End</h5>
+          </div>
+        </div>
+        <div class="input-box">
+          <input type="text" placeholder="Creator" id="creator" name="creator" required>
+        </div>
+        <h2> Options: </h2>
+        <button type="button" id="add-option-btn" class="btn">Add Appointment Option</button>
+        <button type="submit" id="submit-btn" class="btn">Create Appointment</button>
+      </form>
+    </div>
+  </div>
+
+  <script src="./js/js.js"></script>
+</body>
+
+</html>
