--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,50 +28,57 @@
       </div>
     </nav>
   </header>
-
   <div class="wrapper">
     <div class="h2">
-      <h2><b>List of all Appointments</b></h2>
+      <h2>List of all Appointments</h2>
     </div>
     <div class="list-group" id="appointments-list"></div>
-
     <div class="Details" style="display: none">
       <h3>Details</h3>
       <span id="detail-id" hidden></span>
-      <p><strong>Name:</strong> <span id="detail-name"></span></p>
-      <p><strong>Location:</strong> <span id="detail-location"></span></p>
-      <p><strong>Description:</strong> <span id="detail-description"></span></p>
-      <p><strong>Voting-Start:</strong> <span id="detail-start"></span></p>
-      <p><strong>Creator:</strong> <span id="detail-creator"></span></p>
-      <p><strong>This Voting is open until:</strong> <span id="detail-end"></span></p>
+      <p>Name: <span id="detail-name"></span></p>
+      <p>Location: <span id="detail-location"></span></p>
+      <p>Description: <span id="detail-description"></span></p>
+      <p>Voting-Start: <span id="detail-start"></span></p>
+      <p>Creator: <span id="detail-creator"></span></p>
+      <p>This Voting is open until: <span id="detail-end"></span></p>
       <form id="vote-form" action="#">
-        <div class="input-box">
-          <input type="text" placeholder="Name" id="voter" required="" />
+        <div class="mb-3">
+          <label for="voter" class="form-label">Name</label>
+          <input type="text" class="form-control" id="voter" name="voter" required>
         </div>
         <h3>Options:</h3>
-        <div class="appointment option"></div>
-        <h3>Comments:</h3>
+        <div class="appointment option mt-2"></div>
+        <h3 class="mt-2">Comments:</h3>
         <div id="list-comments"></div>
-        <div class="input-box">
-          <input id="voter-comment" type="text" placeholder="add a comment" />
+        <div class="mb-3">
+          <label for="voter-comment" class="form-label">Comment</label>
+          <input type="text" class="form-control" id="voter-comment" name="voter-comment">
         </div>
-        <button id="vote-comment" type="button" class="btn">Submit</button>
-        <button id="del-btn" type="button" class="btn">Delete</button>
+        <button class="btn btn-primary" id="vote-comment" type="button">Submit</button>
+        <button class="btn btn-primary" id="del-btn" type="button">Delete Appointment</button>
       </form>
       <div id="box">
       </div>
     </div>
     <div class="newApp" style="display: none">
-      <h2><b>New Appointment</b></h2>
+      <h2 class="mb-3">New Appointment</h2>
       <form id="appointment-form" action="#">
-        <div class="input-box">
-          <input type="text" placeholder="Name" id="name" name="name" required>
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" class="form-control" id="name" name="name" aria-describedby="nameHelp">
+          <div id="nameHelp" class="form-text">Please enter your name/nickname</div>
         </div>
-        <div class="input-box">
-          <input type="text" placeholder="Location" id="location" name="location" required>
+        <div class="mb-3">
+          <label for="location" class="form-label">Location of Appointment</label>
+          <input type="text" class="form-control" id="location" name="location" aria-describedby="locationHelp">
+          <div id="locationHelp" class="form-text">Please enter the Location at which the appointment is held</div>
         </div>
-        <div class="input-box">
-          <input type="text" placeholder="Description" id="description" name="description" required>
+        <div class="mb-3">
+          <label for="description" class="form-label">Email address</label>
+          <input type="text" class="form-control" id="description" name="description"
+            aria-describedby="descriptionHelp">
+          <div id="descriptionHelp" class="form-text">Add a description to the appointment</div>
         </div>
         <div class="row">
           <div class="input-box col">
@@ -83,16 +90,16 @@
             <h5>Vote-End</h5>
           </div>
         </div>
-        <div class="input-box">
-          <input type="text" placeholder="Creator" id="creator" name="creator" required>
+        <div class="mb-3">
+          <label for="creator" class="form-label">Creator</label>
+          <input type="text" class="form-control" id="creator" name="creator" required>
         </div>
-        <h2> Options: </h2>
-        <button type="button" id="add-option-btn" class="btn">Add Appointment Option</button>
-        <button type="submit" id="submit-btn" class="btn">Create Appointment</button>
+        <h2>Options: </h2>
+        <button class="btn btn-primary" id="add-option-btn" type="button">Add Timeslot</button>
+        <button class="btn btn-primary" id="submit-btn" type="submit">Create Appointment</button>
       </form>
     </div>
   </div>
-
   <script src="./js/js.js"></script>
 </body>
 
