--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,6 +75,7 @@
           <div id="descriptionHelp" class="form-text">Add a description to the appointment</div>
         </div>
         <div class="row">
+          <h3>Voting timeframe</h3>
           <div class="input-box col">
             <h5>Start date</h5>
             <input type="datetime-local" id="start" name="start" required>
