--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
           <label for="voter-comment" class="form-label">Comment</label>
           <input type="text" class="form-control" id="voter-comment" name="voter-comment">
         </div>
-        <button class="btn btn-primary" id="vote-comment" type="button" onclick="voting();">Submit</button>
+        <button class="btn btn-primary" id="vote-comment" type="button">Add vote and comment</button>
         <button class="btn btn-primary" id="del-btn" type="button">Delete Appointment</button>
       </form>
       <div id="box">
